# python-advanced-playground

./: README.md  pyproject.toml
dependency_injector/: 01_singleton.py  __init__.py
multiprocessing/: 01_multiprocessing.py  02_multithreading.py
projects/async_streaming_fastapi/: Makefile  backend_fastapi.py  frontend_sample_js.js  index.html  pyproject.toml
projects/fastapi_with_dbs/: .dockerignore  .env  README.md  __init__.py  app.py  containers.py  docker-compose.yml  main.py  pgadmin-servers.json  pyproject.toml  routes.py  settings.py  test_db.py
projects/fastapi_with_dbs/debug/: debug_env.py
projects/fastapi_with_dbs/init-scripts/: 01-init.sql
