[project]
name = "setup-config"
version = "0.1.0"
description = "FastAPI project with dependency injection"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "dependency-injector>=4.41.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=6.0.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatchling to include the current directory as a package
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
